modal on mobile fix

--- a/AuctionLand.Web/Content/Site.less
+++ b/AuctionLand.Web/Content/Site.less
@@ -1,5 +1,25 @@
 ﻿
 ////////////////////////
+
+.modal { 
+    position: fixed!important; 
+    top: 3%!important; 
+    right: 3%!important; 
+    left: 3%!important; 
+    width: auto!important; 
+    margin: 0!important; 
+}
+.modal-body { 
+    height: 60%!important; 
+}
+
+.modal-body { 
+    max-height: 350px!important; 
+    padding: 15px!important; 
+    overflow-y: auto!important; 
+    -webkit-overflow-scrolling: touch!important; 
+ }
+
 .portfolio_description, #BathroomBedroomSizeSection {
 background: -moz-linear-gradient(top,  rgba(255,250,214,0.1) 0%, rgba(255,249,214,0.89) 9%, rgba(255,244,216,1) 100%); /* FF3.6+ */
 background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,250,214,0.1)), color-stop(9%,rgba(255,249,214,0.89)), color-stop(100%,rgba(255,244,216,1))); /* Chrome,Safari4+ */
@@ -8,15 +28,12 @@ background: -o-linear-gradient(top,  rgba(255,250,214,0.1) 0%,rgba(255,249,214,0
 background: -ms-linear-gradient(top,  rgba(255,250,214,0.1) 0%,rgba(255,249,214,0.89) 9%,rgba(255,244,216,1) 100%); /* IE10+ */
 background: linear-gradient(to bottom,  rgba(255,250,214,0.1) 0%,rgba(255,249,214,0.89) 9%,rgba(255,244,216,1) 100%); /* W3C */
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1afffad6', endColorstr='#fff4d8',GradientType=0 ); /* IE6-9 */
-
-
 }
 
 .portfolio_description {
     position:absolute;
     width: 97%;
     bottom:0;
-
 }
 
 #myNavBarText {
